Cycles; massive shading failures with glass node mixing, whiteouts and blackouts. #40964

Closed
opened 2014-07-06 04:37:57 +02:00 by Adam Friesen · 11 comments

System Information
Win7 64 bit, Ivy Bridge i7 CPU, ATI 7xxx GPU, 16 gigs of RAM

Blender Version
Broken: 5aec61f
Worked: Any pre-2.71 release build.

Short description of error
As of the last month (perhaps since the new importance sampling commit), the user can no longer mix two or more glass nodes together for any purpose without getting either a massive blowout or a total blackout. It seems glass shading in general is crippled now for anything but basic uses (which is using just one glass node). I'd hate to contribute to the ever growing bug list (do we have anyone making these a priority right now without Brecht?), but one more for the pile anyway.

Exact steps for others to reproduce the error
Open the attached .blend and press F12, notice the white out when two glass nodes are being mixed while a blackout occurs when all four are mixed. This only occurs when the roughness value is above 1.
Bugged_glass.blend

System Information Win7 64 bit, Ivy Bridge i7 CPU, ATI 7xxx GPU, 16 gigs of RAM Blender Version Broken: 5aec61f Worked: Any pre-2.71 release build. **Short description of error** As of the last month (perhaps since the new importance sampling commit), the user can no longer mix two or more glass nodes together for any purpose without getting either a massive blowout or a total blackout. It seems glass shading in general is crippled now for anything but basic uses (which is using just one glass node). I'd hate to contribute to the ever growing bug list (do we have anyone making these a priority right now without Brecht?), but one more for the pile anyway. **Exact steps for others to reproduce the error** Open the attached .blend and press F12, notice the white out when two glass nodes are being mixed while a blackout occurs when all four are mixed. This only occurs when the roughness value is above 1. [Bugged_glass.blend](https://archive.blender.org/developer/F96812/Bugged_glass.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Ace_Dragon

Added subscriber: @Ace_Dragon
Author

A possible thing that might help.

It appears that the root cause for both this and the refraction shader bug I reported a few days ago could be one and the same, and that root cause would likely be in whatever code came in when the importance sampling for glossy shading was overhauled.

So fixing one of them might fix the other, but that comes with the disclaimer that I don't know for sure how the code works.

A possible thing that might help. It appears that the root cause for both this and the refraction shader bug I reported a few days ago could be one and the same, and that root cause would likely be in whatever code came in when the importance sampling for glossy shading was overhauled. So fixing one of them might fix the other, but that comes with the disclaimer that I don't know for sure how the code works.
Author

Oh, fun fact, I just found out that Glass is now completely broken when OSL shading is turned on in post 2.71 builds (the refraction component just renders as black). Switch to OSL in this file and even stripping the node setup down to a single Glass BSDF won't work.

So if you're reliant on custom OSL shading, Cycles is pretty much unusable for the time being in many situations.

Oh, fun fact, I just found out that Glass is now completely broken when OSL shading is turned on in post 2.71 builds (the refraction component just renders as black). Switch to OSL in this file and even stripping the node setup down to a single Glass BSDF won't work. So if you're reliant on custom OSL shading, Cycles is pretty much unusable for the time being in many situations.

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Fixed the OSL Glass issue in e929dc2d8c. The fireflies still need to be fixed though, not sure yet what's going on.

Fixed the OSL Glass issue in e929dc2d8cb0. The fireflies still need to be fixed though, not sure yet what's going on.
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

Confirmed that f5cb0cf1a5 is the commit that broke.

Confirmed that f5cb0cf1a5 is the commit that broke.
Sergey Sharybin self-assigned this 2014-07-14 13:24:03 +02:00

This issue was referenced by a378f8d2d8

This issue was referenced by a378f8d2d8f7d30eb699ee2f16e111f60b7900df

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a378f8d2d8.

Closed by commit a378f8d2d8.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40964
No description provided.