Fix part of T40964: Glass shader was giving wrong results with OSL.